# precocious_puberty_ML

./: .dockerignore  .gitignore  Dockerfile  README.md  TabPFN_Enhanced.ipynb  TabPFN_Simplified.ipynb  Tabm_Enhanced.ipynb  Tabm_Simplified.ipynb  convert.py  convert_dropna.py  convert_old.py  convert_simplified.py  docker-compose.yml  model_visualise.ipynb  pyproject.toml  pyrightconfig.json  requirements-docker.txt  requirements.txt  机器学习.ipynb  机器学习_Simplified.ipynb  特征可视化.ipynb
.github/instructions/: codacy.instructions.md
Enhanced/: TabPFN_Enhanced.ipynb  Tabm_Enhanced.ipynb  convert_Enhanced.py  model_visualise.ipynb  机器学习_Enhanced.ipynb
Simplified/: TabPFN_Simplified.ipynb  Tabm_Simplified.ipynb  convert_Simplified.py  models_visualise.ipynb  机器学习_Simplified.ipynb
