
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "adagio==0.2.6",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiohttp-cors==0.8.1",
    "aiosignal==1.4.0",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "anysqlite==0.0.5",
    "attrs==25.4.0",
    "autogluon==1.4.0",
    "autogluon-common==1.4.0",
    "autogluon-core==1.4.0",
    "autogluon-features==1.4.0",
    "autogluon-multimodal==1.4.0",
    "autogluon-tabular==1.4.0",
    "autogluon-timeseries==1.4.0",
    "backoff==2.2.1",
    "beartype==0.22.6",
    "beautifulsoup4==4.14.2",
    "blinker==1.9.0",
    "blis==1.3.3",
    "boto3==1.41.2",
    "botocore==1.41.2",
    "cachetools==6.2.2",
    "catalogue==2.0.10",
    "catboost==1.2.8",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "colorful==0.5.8",
    "colorlog==6.10.1",
    "colour==0.1.5",
    "confection==0.1.5",
    "contourpy==1.3.3",
    "coreforecast==0.0.16",
    "cycler==0.12.1",
    "cymem==2.0.13",
    "datasets==4.0.0",
    "defusedxml==0.7.1",
    "dep-logic==0.5.2",
    "dill==0.3.8",
    "distlib==0.4.0",
    "distro==1.9.0",
    "ecos==2.0.14",
    "einops==0.8.1",
    "einx==0.3.0",
    "eval-type-backport==0.3.0",
    "evaluate==0.4.6",
    "fastai==2.8.5",
    "fastcore==1.8.16",
    "fastdownload==0.0.7",
    "fastprogress==1.0.3",
    "fasttransform==0.0.2",
    "filelock==3.20.0",
    "findpython==0.7.1",
    "fonttools==4.60.1",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "fugue==0.9.2",
    "future==1.0.0",
    "galois==0.4.7",
    "gdown==5.2.0",
    "gluonts==0.16.2",
    "google-api-core==2.28.1",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.72.0",
    "graphviz==0.21",
    "greenlet==3.2.4",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "hishel==0.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "hyperopt==0.2.7",
    "id==1.5.0",
    "idna==3.11",
    "ImageIO==2.37.2",
    "installer==0.7.0",
    "ipywidgets==8.1.8",
    "Jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.9.1",
    "jupyterlab-widgets==3.0.16",
    "kditransform==1.2.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "lightgbm==4.6.0",
    "lightning==2.5.6",
    "lightning-utilities==0.15.2",
    "llvmlite==0.45.1",
    "loguru==0.7.3",
    "Mako==1.3.10",
    "Markdown==3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "mlforecast==0.14.0",
    "model-index==0.1.11",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "murmurhash==1.0.15",
    "narwhals==2.12.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6",
    "nlpaug==1.1.11",
    "nltk==3.9.2",
    "numba==0.62.1",
    "numexpr==2.14.1",
    "numpy==2.1.3",
    "nvidia-ml-py3==7.352.0",
    "omegaconf==2.3.0",
    "opencensus==0.11.4",
    "opencensus-context==0.1.3",
    "opendatalab==0.0.10",
    "openmim==0.3.9",
    "openxlab==0.0.11",
    "optuna==4.6.0",
    "ordered-set==4.1.0",
    "orjson==3.11.4",
    "osqp==0.6.7.post3",
    "pandas==2.3.3",
    "patsy==1.0.2",
    "pbs-installer==2025.12.5",
    "pdf2image==1.17.0",
    "pdm==2.26.2",
    "pillow==11.3.0",
    "plotly==6.5.0",
    "plum-dispatch==2.6.0",
    "posthog==6.9.3",
    "preshed==3.0.12",
    "prometheus-client==0.23.1",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==6.33.1",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "py-spy==0.4.1",
    "py4j==0.10.9.9",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycryptodome==3.23.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pydantic-core==2.41.5",
    "pyparsing==3.2.5",
    "pyproject-hooks==1.2.0",
    "PySocks==1.7.1",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytorch-lightning==2.5.6",
    "pytorch-metric-learning==2.8.1",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "qdldl==0.1.7.post5",
    "ray==2.6.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "resolvelib==1.2.1",
    "rich==14.2.0",
    "rpds-py==0.29.0",
    "rsa==4.9.1",
    "rtdl-num-embeddings==0.0.12",
    "s3transfer==0.15.0",
    "safetensors==0.7.0",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scikit-survival==0.25.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "sentencepiece==0.2.1",
    "seqeval==1.2.2",
    "shap==0.50.0",
    "shapiq==1.4.1",
    "shellingham==1.5.4",
    "slicer==0.0.8",
    "smart-open==7.5.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "soupsieve==2.8",
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sparse-transform==0.2.1",
    "SQLAlchemy==2.0.44",
    "srsly==2.5.2",
    "stack-data==0.6.3",
    "statsforecast==2.0.1",
    "statsmodels==0.14.5",
    "sympy==1.14.0",
    "tabpfn-common-utils==0.2.10",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardX==2.6.4",
    "text-unidecode==1.3",
    "thinc==8.3.10",
    "threadpoolctl==3.6.0",
    "tifffile==2025.10.16",
    "timm==1.0.3",
    "tokenizers==0.21.4",
    "tomlkit==0.13.3",
    "toolz==0.12.1",
    "torch==2.9.1+cu130",
    "torchmetrics==1.7.4",
    "torchvision==0.24.1+cu130",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.49.0",
    "triad==1.0.0",
    "truststore==0.10.4",
    "typer-slim==0.20.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "unearth==0.18.1",
    "urllib3==2.5.0",
    "utilsforecast==0.2.11",
    "virtualenv==20.35.4",
    "wasabi==1.1.3",
    "weasel==0.4.3",
    "Werkzeug==3.1.3",
    "widgetsnbextension==4.0.15",
    "win32-setctime==1.2.0",
    "window-ops==0.0.15",
    "wrapt==2.0.1",
    "xgboost==3.0.5",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "-e git+https://github.com/Shen-YuFei/tabm.git@28e47ae301c92ec37787dde1ce923a0793f405b4#egg=tabm",
    "-e git+https://github.com/Shen-YuFei/TabPFN.git@89d80734cb673212a055b2451210b0a1398a576c#egg=tabpfn",
    "-e git+https://github.com/Shen-YuFei/tabpfn-extensions.git@7a900321c6aaea8e58ae23117628eaf18cc5a4ab#egg=tabpfn-extensions",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
